Se creo el archivo JavaScritp, se modifico html y se cambio css

--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="/css/master.css">
+    <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
     <script src="js/app.js
     " charset="utf-8"></script>
+    <div id="one">
+              <h2> Numero de tarjeta <h2>
+                <p id="card"></p>
+                <p id="card"></p>
 
   </body>
 </html>
