Se cambio el nombre de la funcion en javascript

--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Valiar tarjeta</title>
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
     <script src="js/app.js
     " charset="utf-8"></script>
     <div id="one">
-              <h2> Numero de tarjeta <h2>
-                <p id="card"></p>
-                <p id="card"></p>
-
+      <h1>Validando tarjeta de credito</h1>
+      </div>
+      <div id="dos">
+        <h2>Tu tarjeta es valida o invalida</h2>
   </body>
 </html>
